Closed Bug 390042 Opened 17 years ago Closed 17 years ago

mingw build error - error: no matching function for call to `nsAutoString::nsAutoString(jschar*)'

Categories

(Core :: XPConnect, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Assigned: martijn.martijn)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch patch (obsolete) — Splinter Review
I get this build error in my mingw debug build.
The attached patch fixes it for me.

G_READ -DPNG_NO_MMX_CODE -DMOZ_PNG_WRITE   -I../../../../dist/sdk/include
-fno-rtti -fno-exceptions -Wall -Wconversion -Wpointer-arith -Wcast-align -Wover
loaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wno-long-lo
ng -pedantic -mms-bitfields -pipe  -DDEBUG -D_DEBUG -DDEBUG_mw -DTRACING -g   -D
MOZILLA_CLIENT -include ../../../../mozilla-config.h /cygdrive/c/mozilla/mozilla
/js/src/xpconnect/src/XPCCrossOriginWrapper.cpp
c:/mozilla/mozilla/js/src/xpconnect/src/XPCCrossOriginWrapper.cpp: In function `
JSBool IsValFrame(JSContext*, JSObject*, jsval, XPCWrappedNative*)':
c:/mozilla/mozilla/js/src/xpconnect/src/XPCCrossOriginWrapper.cpp:196: error: no
 matching function for call to `nsAutoString::nsAutoString(jschar*)'
../../../../dist/include/string/nsTString.h:534: note: candidates are: nsAutoStr
ing::nsAutoString(const nsSubstringTuple&)
../../../../dist/include/string/nsTString.h:528: note:                 nsAutoStr
ing::nsAutoString(const nsAString_internal&)
../../../../dist/include/string/nsTString.h:521: note:                 nsAutoStr
ing::nsAutoString(const nsAutoString&)
../../../../dist/include/string/nsTString.h:515: note:                 nsAutoStr
ing::nsAutoString(const PRUnichar*, PRUint32) <near match>
../../../../dist/include/string/nsTString.h:508: note:                 nsAutoStr
ing::nsAutoString(PRUnichar) <near match>
../../../../dist/include/string/nsTString.h:503: note:                 nsAutoStr
ing::nsAutoString()
make[5]: *** [XPCCrossOriginWrapper.o] Error 1
make[5]: Leaving directory `/cygdrive/c/mozilla/mozilla/js/src/xpconnect/src'
make[4]: *** [libs] Error 2
make[4]: Leaving directory `/cygdrive/c/mozilla/mozilla/js/src/xpconnect'
make[3]: *** [libs_tier_gecko] Error 2
make[3]: Leaving directory `/cygdrive/c/mozilla/mozilla'
make[2]: *** [tier_gecko] Error 2
make[2]: Leaving directory `/cygdrive/c/mozilla/mozilla'
make[1]: *** [alldep] Error 2
make[1]: Leaving directory `/cygdrive/c/mozilla/mozilla'
make: *** [alldep] Error 2
Attachment #274358 - Flags: superreview?(mrbkap)
Attachment #274358 - Flags: review?(mrbkap)
Comment on attachment 274358 [details] [diff] [review]
patch

nit: remove the space after the > and move the parenthesized expression to the next line (under the <) to preserve the 80th column.
Attachment #274358 - Flags: superreview?(mrbkap)
Attachment #274358 - Flags: superreview?(jst)
Attachment #274358 - Flags: review?(mrbkap)
Attachment #274358 - Flags: review+
Attached patch patchv2Splinter Review
Attachment #274358 - Attachment is obsolete: true
Attachment #274402 - Flags: superreview?(jst)
Attachment #274358 - Flags: superreview?(jst)
Attachment #274402 - Flags: superreview?(jst) → superreview+
Attachment #274402 - Flags: approval1.9?
Assignee: nobody → martijn.martijn
Attachment #274402 - Flags: approval1.9? → approval1.9+
Checking in XPCCrossOriginWrapper.cpp;
/cvsroot/mozilla/js/src/xpconnect/src/XPCCrossOriginWrapper.cpp,v  <--  XPCCross
OriginWrapper.cpp
new revision: 1.7; previous revision: 1.6
done

Checked into trunk.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: