Bug 390042 - mingw build error - error: no matching function for call to nsAutoString::nsAutoString(jschar*), r=mrbkap, sr=jst, a=jst